# fuse-project

./: Dockerfile  README.md  main.py  model.ipynb  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: app.py  pipeline.py  plots.py
data/: data_with_churn.csv  data_without_churn.csv  df.pkl  df_processed.pkl
models/: votation_classifier.pkl
notebook/: model.ipynb
notebook/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebook/catboost_info/learn/: events.out.tfevents
notebook/mlruns/0/: meta.yaml
notebook/mlruns/177651698462437586/: meta.yaml
notebook/mlruns/177651698462437586/025b5e3fd52544678a4f7155dec142a9/: meta.yaml
notebook/mlruns/177651698462437586/03e640a8adf7464d944cd55b40213d20/: meta.yaml
notebook/mlruns/177651698462437586/05517784e0834669be0b04392ddf86ff/: meta.yaml
notebook/mlruns/177651698462437586/05529b75447c4d7f91bfa34cd4dfd268/: meta.yaml
notebook/mlruns/177651698462437586/080c9fe28aa04157bd845679c30a286c/: meta.yaml
notebook/mlruns/177651698462437586/0b5f1a5883904ab5aea508c51326ad38/: meta.yaml
notebook/mlruns/177651698462437586/0bf4a8281b204330bde1fcbfc7087b02/: meta.yaml
notebook/mlruns/177651698462437586/0e6e5e5e117249e29da3d6515a2f2199/: meta.yaml
notebook/mlruns/177651698462437586/10de0d95414a43f2906974d99625e2a9/: meta.yaml
notebook/mlruns/177651698462437586/133fa45f87ee4a73b4e520adb6d70744/: meta.yaml
notebook/mlruns/177651698462437586/1cdb7a36759c490d801cae0991a78b10/: meta.yaml
pipeline/: feature_engineering_pipeline.pkl
(+667 files in other folders)
