[tool.poetry]
name = "churn telecom"
version = "0.1.0"
description = ""
authors = ["Mario Toribio <yuniormtr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "<2.2.0"
seaborn = "^0.13.2"
prettytable = "^3.10.0"
scikit-learn = "^1.4.1.post1"
imblearn = "^0.0"
xgboost = "^2.0.3"
sktime = ">=0.26.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["setuptools", "wheel", "pep517"]
build-backend = "pep517.build"
