[tool.poetry]
name = "churn telecom"
version = "0.1.0"
description = ""
authors = ["Mario Toribio <yuniormtr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.2"
kaleido = "0.2.1"
pycaret = "^3.3.0"
seaborn = "^0.13.2"
prettytable = "^3.10.0"
imblearn = "^0.0"
xgboost = "^2.0.3"
scikit-learn = "^1.4.1.post1"
scipy = "1.11.4"
mlflow = "^2.11.3"
catboost = "^1.2.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
